Fix latlng label on smaller map X dimensions. Update widgets on divider drag.

--- a/src/css/_map-toolbar.css
+++ b/src/css/_map-toolbar.css
@@ -37,6 +37,7 @@
     font-size: 0;
     flex: none;
     cursor: default;
+    white-space: nowrap;
 
     button {
         appearance: none;
